# rust-zkp-demo

./: .gitignore  .gitmodules  Cargo.toml  README.md
config/contracts/: verifier.sol
scripts/: demo.sh
src/: a.rs  anvil.rs  contract_adapter.rs  deploy.rs  events.rs  instance.rs  main.rs  sync.rs  verifier_contract.rs
src/circoms/: merkle.r1cs  merkle.wasm  mycircuit.wasm  single_tx.wasm
src/circuits/: circuit.rs
testdata/: demo.sh  prepare.sh  start.sh
testdata/circoms/: single_tx.r1cs  witness.wtns
